tests/samples/negative/error_handling/try_option_malformed.ax
module try_option_malformed;

enum OptionI32: u8 {
    some(i32) = 1,
    none(i32) = 2,
}

fn maybe() -> OptionI32 {
    return OptionI32.some(1);
}

fn main() -> OptionI32 {
    let value: i32 = maybe()?;
    return OptionI32.some(value);
}
